codex-rs/tui/src/snapshots/codex_tui__debug_config__tests__debug_config_effective_sandbox_modes_with_deny_read.snap
---
source: tui/src/debug_config.rs
expression: rendered.as_str()
---
/debug-config

Config layer stack (lowest precedence first):
  <none>

Requirements:
  - allowed_sandbox_modes: read-only, workspace-write (source: /etc/codex/requirements.toml)
  - permissions.filesystem.deny_read: /home/alice/.gitconfig (source: /etc/codex/requirements.toml)
