codex-rs/tui/src/snapshots/codex_tui__debug_config__tests__debug_config_output_lists_agents_fields.snap
---
source: tui/src/debug_config.rs
assertion_line: 667
expression: render_to_text(&render_agents_config_lines(&config))
---

[agents]:
  - enabled = false
  - max_concurrent_threads_per_session = 7
  - max_depth = -2 (V1 only; ignored by V2)
  - support_agent_type = true (not yet wired)
  - default_subagent_model = gpt-5.6-terra (not yet wired)
  - default_subagent_reasoning_effort = high (not yet wired)
  - job_max_runtime_seconds = 900
  - interrupt_message = false
