codex-rs/tui/src/snapshots/codex_tui__debug_config__tests__debug_config_output_lists_override_layers.snap
---
source: tui/src/debug_config.rs
expression: rendered
---
/debug-config

Config layer stack (lowest precedence first):
  1. system override (<system override>) (enabled)
  2. user override (<user override>) (enabled)
  3. project override (<project override>) (enabled)

Requirements:
  <none>
